syntax = "proto3";
package authenticate.password.v1;

import "google/protobuf/struct.proto";

option go_package = "github.com/core-pb/authenticate/authenticate/password/v1;password";

service Password {
    rpc Check(CheckRequest) returns (CheckResponse) {}
    rpc Generate(GenerateRequest) returns (GenerateResponse) {}
}

message CheckRequest {
    fixed64                id       = 1;
    string                 password = 2;
    google.protobuf.Struct data     = 3;
}
message CheckResponse {}

message GenerateRequest {
    fixed64 id       = 1;
    string  password = 2;
}
message GenerateResponse {
    google.protobuf.Struct data = 2;
}
